--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,8 @@ dependencies:
   flutter:
     sdk: flutter
   carousel_slider: ^4.2.1
-
+  intl: ^0.19.0
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -18,3 +19,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+        - assets/icons/
+        - assets/images/
